# Overwatch

./: .dockerignore  .eslintrc.json  .gitignore  .mypy.ini  .pylintrc  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  sample-config.toml
app/: __main__.py  alerter.py  config.py  exceptions.py  scheduler.py  video_grabber.py
app/alert_plugins/: __init__.py  base.py  siren_alerter.py  telegram_alerter.py
app/bootstrap/: cmd_parser.py  logger.py  startup.py  welcome.py
app/capture/: capture.py  detection_process.py  device.py  filter.py  helpers.py
app/datastructures/: __init__.py  common.py  config_data.py
app/detection/: __init__.py  base.py
app/events/: __init__.py  events.py  publisher.py  topics.py
app/helpers/: __init__.py  misc.py  retry.py  string.py  timers.py
app/metrics/: calc.py  metrics.py
app/system/: system.py
app/web_server/: __init__.py  helpers.py  models.py  reports.py  server_process.py  settings.py  web_app.py
app/websocket_server/: client_manager.py  route_handler.py  server.py
docs/: API.md  config.md  deployment.md  glossary.md  overview.md  plugins.md  user_guide.md
migrations/: env.py
migrations/versions/: 33f712326c36_add_hospitalization_to_report.py  79c2a0160fe4_create_seizure_reports_table.py
scripts/: coverage.sh  generate_pdf_docs.sh  run_web_server_dev.py  test.sh
tests/: conftest.py
tests/configs/: api_test_config.toml  app_test_config.toml
tests/integration/: test_entrypoint.py  test_web_server.py  test_ws_api.py
tests/system/: test_detection_algo.py  (+2 more)
(+34 files in other folders)
